--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Страница о взгляде на перфекционизм в работе и учёбе."
     />
     <title>Надо сделать идеально</title>
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/font.css" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
