--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="icon" href="images/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Надо сделать идеально" />
+    <meta
+      property="og:description"
+      content="Страница о взгляде на перфекционизм в работе и учёбе."
+    />
+    <meta property="og:url" content="#" />
+    <meta property="og:image" content="images/apple-touch-icon.png" />
+    <meta property="twitter:card" content="images/apple-touch-icon.png" />
     <meta
       name="description"
       content="Страница о взгляде на перфекционизм в работе и учёбе."
@@ -16,12 +24,14 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1 class="title">Надо<br />сделать<br />идеально*</h1>
+    <h1 class="title">Надо<br />сделать<br />идеально</h1>
     <video
       src="video/cover-video.mp4"
+      autoplay
+      poster
       loop
       muted
-      width="1600px"
+      width="1600"
       class="video"
     ></video>
   </body>
