Устранение ошибок автотестов

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
+  <body class="body">
     <h1 class="title">Надо<br />сделать<br />идеально</h1>
     <video
       src="video/cover-video.mp4"
       autoplay
-      poster
+      poster="images/apple-touch-icon.png"
       loop
       muted
       width="1600"
