Устранение ошибок автотестов

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <title>Надо сделать идеально</title>
     <link rel="stylesheet" href="fonts/font.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+    <!--    <link rel="stylesheet" href="styles/global.css" />-->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="body">
@@ -31,7 +31,6 @@
       poster="images/apple-touch-icon.png"
       loop
       muted
-      width="1600"
       class="video"
     ></video>
   </body>
