--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
     />
     <title>Надо сделать идеально</title>
     <link rel="stylesheet" href="fonts/font.css" />
-    <!--    <link rel="stylesheet" href="styles/global.css" />-->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="body">
     <h1 class="title">Надо<br />сделать<br />идеально</h1>
     <video
       src="video/cover-video.mp4"
-      autoplay
-      poster="images/apple-touch-icon.png"
+      poster="images/poster.png"
       loop
       muted
       class="video"
