--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <video
       src="video/cover-video.mp4"
       poster="images/poster.png"
+      autoplay
       loop
       muted
       class="video"
