Устранение ошибок автотестов

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <h1 class="title">Надо<br />сделать<br />идеально</h1>
     <video
       src="video/cover-video.mp4"
-      poster="images/poster.png"
-      autoplay
+      poster="images/cover.png"
       loop
       muted
+      playsinline
       class="video"
     ></video>
   </body>
