--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="body">
-    <h1 class="title">Надо<br />сделать<br />идеально</h1>
+    <h1 class="title">
+      Надо<br />сделать<br />
+      идеально
+    </h1>
     <video
       src="video/cover-video.mp4"
       poster="images/cover.png"
