Устранение ошибок автотестов

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1 class="title">Надо<br />сделать<br />идеально</h1>
     <video
       src="video/cover-video.mp4"
-      poster="images/img.png"
+      poster="images/cover.png"
       autoplay
       loop
       muted
