Устранение замечаний ревьюера

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
   <body class="body">
     <h1 class="title">
-      Надо<br />сделать<br /><span class="bottom_text">идеально</span>
+      <!--      Надо<br />сделать<br /><span class="bottom_text">идеально</span>-->
+      Надо сделать идеально
     </h1>
     <video
       src="video/cover-video.mp4"
