Устранение замечаний ревьюера

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body class="body">
     <h1 class="title">
       <!--      Надо<br />сделать<br /><span class="bottom_text">идеально</span>-->
-      Надо сделать идеально
+      Надо сделать <span class="bottom_line">идеально</span>
     </h1>
     <video
       src="video/cover-video.mp4"
